kueyen/rook-ceph/multisite/multisite-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-rgw-zone-b-multisite-store-ingress
  namespace: default

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  tls:
  - hosts:
    - &host s3test.kueyen.ls.lsst.org
    secretName: rook-ceph-rgw-zone-b-multisite-store-ingress-tls
  rules:
  - host: *host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-rgw-zone-b-multisite-store
            port:
              number: 80
